'dired-bind-info' no longer have any effect and are obsolete.

To get the old behavior back and unbind these keys in Dired mode, add
the following to your Init file:

    (with-eval-after-load 'dired
      (keymap-set dired-mode-map "N" nil)
      (keymap-set dired-mode-map "I" nil))

---
*** New command 'dired-do-eww'.
This command visits the file on the current line with EWW.

---
*** New user option 'dired-omit-lines'.
This is used by 'dired-omit-mode', and now allows you to hide based on
other things than just the file names.

+++
*** New user option 'dired-mouse-drag-files'.
If non-nil, dragging file names with the mouse in a Dired buffer will
initiate a drag-and-drop session allowing them to be opened in other
programs.

+++
*** New user option 'dired-free-space'.
Dired will now, by default, include the free space in the first line
instead of having it on a separate line.  To get the previous behavior
back, say:

    (setopt dired-free-space 'separate)

---
*** New user option 'dired-make-directory-clickable'.
If non-nil (which is the default), hitting 'RET' or 'mouse-1' on
the directory components at the directory displayed at the start of
the buffer will take you to that directory.

---
*** Search and replace in Dired/Wdired supports more regexps.
For example, the regexp ".*" will match only characters that are part
of the file name.  Also "^.*$" can be used to match at the beginning
of the file name and at the end of the file name.  This is used only
when searching on file names.  In Wdired this can be used when the new
user option 'wdired-search-replace-filenames' is non-nil (which is the
default).

** Elisp

---
*** New command 'elisp-eval-region-or-buffer' (bound to 'C-c C-e').
This command evals the forms in the active region or in the whole buffer.

---
*** New commands 'elisp-byte-compile-file' and 'elisp-byte-compile-buffer'.
These commands (bound to 'C-c C-f' and 'C-c C-b', respectively)